--- a/test.ipynb
+++ b/test.ipynb
@@ -105,10 +105,10 @@
     "        count += 1\n",
     "\n",
     "# Виведення перших N записів колекції N1\n",
-    "print_n_col1_records(11)\n",
+    "#print_n_col1_records(11)\n",
     "\n",
     "# Виведення перших M записів колекції N2\n",
-    "print_m_col2_records(11)\n",
+    "#print_m_col2_records(11)\n",
     "\n",
     "# Виведення ланцюжків документів\n",
     "document_chains(1, 11)\n",
